src/gtkscintilla.h

typedef struct _GtkScintilla			GtkScintilla;
void 				gtk_scintilla_get_property				(GObject *object, guint property_id, GValue *value, GParamSpec *pspec);
gint 		gtk_scintilla_get_length (GtkScintilla *sci);
gchar 		gtk_scintilla_get_char_at (GtkScintilla *sci, guint pos);
gint 		gtk_scintilla_get_current_pos (GtkScintilla *sci);
gint 		gtk_scintilla_get_anchor (GtkScintilla *sci);
gchar 		gtk_scintilla_get_style_at (GtkScintilla *sci, guint pos);
gboolean 	gtk_scintilla_get_undo_collection (GtkScintilla *sci);
gint 		gtk_scintilla_get_cur_line (GtkScintilla *sci, gint length, gchar *text);
gint 		gtk_scintilla_get_end_styled (GtkScintilla *sci);
gint 		gtk_scintilla_get_eol_mode (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_buffered_draw (GtkScintilla *sci);
gint 		gtk_scintilla_get_tab_width (GtkScintilla *sci);
gint 		gtk_scintilla_get_margin_type_n (GtkScintilla *sci, gint margin);
gint 		gtk_scintilla_get_margin_width_n (GtkScintilla *sci, gint margin);
gint 		gtk_scintilla_get_margin_mask_n (GtkScintilla *sci, gint margin);
gboolean 	gtk_scintilla_get_margin_sensitive_n (GtkScintilla *sci, gint margin);
gint 		gtk_scintilla_get_sel_alpha (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_sel_eol_filled (GtkScintilla *sci);
gint 		gtk_scintilla_get_caret_period (GtkScintilla *sci);
guchar 		gtk_scintilla_get_style_bits (GtkScintilla *sci);
gint 		gtk_scintilla_get_line_state (GtkScintilla *sci, gint line);
gint 		gtk_scintilla_get_max_line_state (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_caret_line_visible (GtkScintilla *sci);
gint 		gtk_scintilla_get_caret_line_back (GtkScintilla *sci);
gint 		gtk_scintilla_get_indent (GtkScintilla *sci);
gint 		gtk_scintilla_get_line_indentation (GtkScintilla *sci, gint line);
gint 		gtk_scintilla_get_line_indent_position (GtkScintilla *sci, gint line);
gint 		gtk_scintilla_get_column (GtkScintilla *sci, gint pos);
gboolean 	gtk_scintilla_get_h_scroll_bar (GtkScintilla *sci);
gint 		gtk_scintilla_get_indentation_guides (GtkScintilla *sci);
gint 		gtk_scintilla_get_highlight_guide (GtkScintilla *sci);
gint 		gtk_scintilla_get_line_end_position (GtkScintilla *sci, gint line);
gint 		gtk_scintilla_get_code_page (GtkScintilla *sci);
gint 		gtk_scintilla_get_caret_fore (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_read_only (GtkScintilla *sci);
gint 		gtk_scintilla_get_selection_start (GtkScintilla *sci);
gint 		gtk_scintilla_get_selection_end (GtkScintilla *sci);
gint 		gtk_scintilla_get_print_magnification (GtkScintilla *sci);
gint 		gtk_scintilla_get_print_colour_mode (GtkScintilla *sci);
gint 		gtk_scintilla_get_first_visible_line (GtkScintilla *sci);
gchar*		gtk_scintilla_get_line (GtkScintilla *sci, guint line);
gint 		gtk_scintilla_get_line_count (GtkScintilla *sci);
gint 		gtk_scintilla_get_margin_left (GtkScintilla *sci);
gint 		gtk_scintilla_get_margin_right (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_modify (GtkScintilla *sci);
gint 		gtk_scintilla_get_sel_text (GtkScintilla *sci, gchar *text);
gchar*		gtk_scintilla_get_text_range (GtkScintilla *sci, guint start_pos, gint end_pos);
gchar*		gtk_scintilla_get_text (GtkScintilla *sci);
gint		gtk_scintilla_get_text_length (GtkScintilla *sci);
gint		gtk_scintilla_get_direct_function (GtkScintilla *sci);
gint		gtk_scintilla_get_direct_pointer (GtkScintilla *sci);
gboolean	gtk_scintilla_get_overtype (GtkScintilla *sci);
gint		gtk_scintilla_get_caret_width (GtkScintilla *sci);
gint		gtk_scintilla_get_target_start (GtkScintilla *sci);
gint		gtk_scintilla_get_target_end (GtkScintilla *sci);
gint		gtk_scintilla_get_search_flags (GtkScintilla *sci);
gint		gtk_scintilla_get_fold_level (GtkScintilla *sci, gint line);
gint		gtk_scintilla_get_last_child (GtkScintilla *sci, gint line, gint level);
gint		gtk_scintilla_get_fold_parent (GtkScintilla *sci, gint line);
gboolean	gtk_scintilla_get_line_visible (GtkScintilla *sci, gint line);
gboolean	gtk_scintilla_get_fold_expanded (GtkScintilla *sci, gint line);
gboolean	gtk_scintilla_get_tab_indents (GtkScintilla *sci);
gboolean	gtk_scintilla_get_backspace_unindents (GtkScintilla *sci);
gint		gtk_scintilla_get_mouse_dwell_time (GtkScintilla *sci);
gint		gtk_scintilla_get_layout_cache (GtkScintilla *sci);
gint		gtk_scintilla_get_scroll_width (GtkScintilla *sci);
gboolean	gtk_scintilla_get_scroll_width_tracking (GtkScintilla *sci);
gboolean	gtk_scintilla_get_end_at_last_line (GtkScintilla *sci);
gboolean	gtk_scintilla_get_two_phase_draw (GtkScintilla *sci);
gint		gtk_scintilla_get_font_quality (GtkScintilla *sci);
gint		gtk_scintilla_get_multi_paste (GtkScintilla *sci);
gchar*		gtk_scintilla_get_tag (GtkScintilla *sci, gint tag_number);
gint		gtk_scintilla_get_doc_pointer (GtkScintilla *sci);
gint		gtk_scintilla_get_edge_column (GtkScintilla *sci);
gint		gtk_scintilla_get_edge_mode (GtkScintilla *sci);
gint		gtk_scintilla_get_edge_colour (GtkScintilla *sci);
gint		gtk_scintilla_get_mod_event_mask (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_focus (GtkScintilla *sci);
gint		gtk_scintilla_get_status (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_mouse_down_captures (GtkScintilla *sci);
gint		gtk_scintilla_get_cursor (GtkScintilla *sci);
gint		gtk_scintilla_get_control_char_symbol (GtkScintilla *sci);
gint		gtk_scintilla_get_print_wrap_mode (GtkScintilla *sci);
gint		gtk_scintilla_get_hotspot_active_fore (GtkScintilla *sci);
gint		gtk_scintilla_get_hotspot_active_back (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_hotspot_active_underline (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_hotspot_single_line (GtkScintilla *sci);
gint		gtk_scintilla_get_selection_mode (GtkScintilla *sci);
gint		gtk_scintilla_get_line_sel_start_position (GtkScintilla *sci, gint line);
gint		gtk_scintilla_get_line_sel_end_position (GtkScintilla *sci, gint line);
gint		gtk_scintilla_get_caret_sticky (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_paste_convert_endings (GtkScintilla *sci);
gint		gtk_scintilla_get_caret_line_back_alpha (GtkScintilla *sci);
gint		gtk_scintilla_get_caret_style (GtkScintilla *sci);
gint		gtk_scintilla_get_indicator_current (GtkScintilla *sci);
gint		gtk_scintilla_get_indicator_value (GtkScintilla *sci);
gint		gtk_scintilla_get_position_cache (GtkScintilla *sci);
gint		gtk_scintilla_get_character_pointer (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_keys_unicode (GtkScintilla *sci);
gint		gtk_scintilla_get_extra_ascent (GtkScintilla *sci);
gint		gtk_scintilla_get_extra_descent (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_multiple_selection (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_additional_selection_typing (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_additional_carets_visible (GtkScintilla *sci);
gint		gtk_scintilla_get_selections (GtkScintilla *sci);
gint		gtk_scintilla_get_main_selection (GtkScintilla *sci);
gint		gtk_scintilla_get_selection_n_caret (GtkScintilla *sci, gint selection);
gint		gtk_scintilla_get_selection_n_anchor (GtkScintilla *sci, gint selection);
gint		gtk_scintilla_get_selection_n_caret_virtual_space (GtkScintilla *sci, gint selection);
gint		gtk_scintilla_get_selection_n_anchor_virtual_space (GtkScintilla *sci, gint selection);
gint		gtk_scintilla_get_selection_n_start (GtkScintilla *sci, gint selection);
gint		gtk_scintilla_get_selection_n_end (GtkScintilla *sci, gint selection);
gint		gtk_scintilla_get_rectangular_selection_caret (GtkScintilla *sci);
gint		gtk_scintilla_get_rectangular_selection_anchor (GtkScintilla *sci);
gint		gtk_scintilla_get_rectangular_selection_caret_virtual_space (GtkScintilla *sci);
gint		gtk_scintilla_get_rectangular_selection_anchor_virtual_space (GtkScintilla *sci);
gint		gtk_scintilla_get_rectangular_selection_modifier (GtkScintilla *sci);
gint		gtk_scintilla_get_additional_sel_alpha (GtkScintilla *sci);
gint		gtk_scintilla_get_lexer (GtkScintilla *sci);
gint		gtk_scintilla_get_lexer_property (GtkScintilla *sci, const gchar *key, gchar *buf);
gint		gtk_scintilla_get_lexer_property_expanded (GtkScintilla *sci, const gchar *key, gchar *buf);
gint		gtk_scintilla_get_lexer_property_int (GtkScintilla *sci, const gchar *key);
gint		gtk_scintilla_get_style_bits_needed (GtkScintilla *sci);
gchar*		gtk_scintilla_get_lexer_language (GtkScintilla *sci);