bindings/vala/gtkscintilla-1.0.vapi

		[CCode (cname = "gtk_scintilla_get_additional_carets_visible")]
		public bool get_additional_carets_visible ();
		[CCode (cname = "gtk_scintilla_get_additional_sel_alpha")]
		public int get_additional_sel_alpha ();
		[CCode (cname = "gtk_scintilla_get_additional_selection_typing")]
		public bool get_additional_selection_typing ();
		[CCode (cname = "gtk_scintilla_get_anchor")]
		public int get_anchor ();
		[CCode (cname = "gtk_scintilla_get_backspace_unindents")]
		public bool get_backspace_unindents ();
		[CCode (cname = "gtk_scintilla_get_buffered_draw")]
		public bool get_buffered_draw ();
		[CCode (cname = "gtk_scintilla_get_caret_fore")]
		public int get_caret_fore ();
		[CCode (cname = "gtk_scintilla_get_caret_line_back")]
		public int get_caret_line_back ();
		[CCode (cname = "gtk_scintilla_get_caret_line_back_alpha")]
		public int get_caret_line_back_alpha ();
		[CCode (cname = "gtk_scintilla_get_caret_line_visible")]
		public bool get_caret_line_visible ();
		[CCode (cname = "gtk_scintilla_get_caret_period")]
		public int get_caret_period ();
		[CCode (cname = "gtk_scintilla_get_caret_sticky")]
		public int get_caret_sticky ();
		[CCode (cname = "gtk_scintilla_get_caret_style")]
		public int get_caret_style ();
		[CCode (cname = "gtk_scintilla_get_caret_width")]
		public int get_caret_width ();
		[CCode (cname = "gtk_scintilla_get_char_at")]
		public int get_char_at (int pos);
		[CCode (cname = "gtk_scintilla_get_character_pointer")]
		public int get_character_pointer ();
		[CCode (cname = "gtk_scintilla_get_code_page")]
		public int get_code_page ();
		[CCode (cname = "gtk_scintilla_get_column")]
		public int get_column (int pos);
		[CCode (cname = "gtk_scintilla_get_control_char_symbol")]
		public int get_control_char_symbol ();
		[CCode (cname = "gtk_scintilla_get_cur_line")]
		public int get_cur_line (int length, string text);
		[CCode (cname = "gtk_scintilla_get_current_pos")]
		public int get_current_pos ();
		[CCode (cname = "gtk_scintilla_get_cursor")]
		public int get_cursor ();
		[CCode (cname = "gtk_scintilla_get_direct_function")]
		public int get_direct_function ();
		[CCode (cname = "gtk_scintilla_get_direct_pointer")]
		public int get_direct_pointer ();
		[CCode (cname = "gtk_scintilla_get_doc_pointer")]
		public int get_doc_pointer ();
		[CCode (cname = "gtk_scintilla_get_edge_colour")]
		public int get_edge_colour ();
		[CCode (cname = "gtk_scintilla_get_edge_column")]
		public int get_edge_column ();
		[CCode (cname = "gtk_scintilla_get_edge_mode")]
		public int get_edge_mode ();
		[CCode (cname = "gtk_scintilla_get_end_at_last_line")]
		public bool get_end_at_last_line ();
		[CCode (cname = "gtk_scintilla_get_end_styled")]
		public int get_end_styled ();
		[CCode (cname = "gtk_scintilla_get_eol_mode")]
		public int get_eol_mode ();
		[CCode (cname = "gtk_scintilla_get_extra_ascent")]
		public int get_extra_ascent ();
		[CCode (cname = "gtk_scintilla_get_extra_descent")]
		public int get_extra_descent ();
		[CCode (cname = "gtk_scintilla_get_first_visible_line")]
		public int get_first_visible_line ();
		[CCode (cname = "gtk_scintilla_get_focus")]
		public bool get_focus ();
		[CCode (cname = "gtk_scintilla_get_fold_expanded")]
		public bool get_fold_expanded (int line);
		[CCode (cname = "gtk_scintilla_get_fold_level")]
		public int get_fold_level (int line);
		[CCode (cname = "gtk_scintilla_get_fold_parent")]
		public int get_fold_parent (int line);
		[CCode (cname = "gtk_scintilla_get_font_quality")]
		public int get_font_quality ();
		[CCode (cname = "gtk_scintilla_get_h_scroll_bar")]
		public bool get_h_scroll_bar ();
		[CCode (cname = "gtk_scintilla_get_highlight_guide")]
		public int get_highlight_guide ();
		[CCode (cname = "gtk_scintilla_get_hotspot_active_back")]
		public int get_hotspot_active_back ();
		[CCode (cname = "gtk_scintilla_get_hotspot_active_fore")]
		public int get_hotspot_active_fore ();
		[CCode (cname = "gtk_scintilla_get_hotspot_active_underline")]
		public bool get_hotspot_active_underline ();
		[CCode (cname = "gtk_scintilla_get_hotspot_single_line")]
		public bool get_hotspot_single_line ();
		[CCode (cname = "gtk_scintilla_get_indent")]
		public int get_indent ();
		[CCode (cname = "gtk_scintilla_get_indentation_guides")]
		public int get_indentation_guides ();
		[CCode (cname = "gtk_scintilla_get_indicator_current")]
		public int get_indicator_current ();
		[CCode (cname = "gtk_scintilla_get_indicator_value")]
		public int get_indicator_value ();
		[CCode (cname = "gtk_scintilla_get_keys_unicode")]
		public bool get_keys_unicode ();
		[CCode (cname = "gtk_scintilla_get_last_child")]
		public int get_last_child (int line, int level);
		[CCode (cname = "gtk_scintilla_get_layout_cache")]
		public int get_layout_cache ();
		[CCode (cname = "gtk_scintilla_get_length")]
		public int get_length ();
		[CCode (cname = "gtk_scintilla_get_lexer")]
		public int get_lexer ();
		[CCode (cname = "gtk_scintilla_get_lexer_language")]
		public int get_lexer_language (string text);
		[CCode (cname = "gtk_scintilla_get_lexer_property")]
		public int get_lexer_property (string key, string buf);
		[CCode (cname = "gtk_scintilla_get_lexer_property_expanded")]
		public int get_lexer_property_expanded (string key, string buf);
		[CCode (cname = "gtk_scintilla_get_lexer_property_int")]
		public int get_lexer_property_int (string key);
		[CCode (cname = "gtk_scintilla_get_line")]
		public int get_line (int line, string text);
		[CCode (cname = "gtk_scintilla_get_line_count")]
		public int get_line_count ();
		[CCode (cname = "gtk_scintilla_get_line_end_position")]
		public int get_line_end_position (int line);
		[CCode (cname = "gtk_scintilla_get_line_indent_position")]
		public int get_line_indent_position (int line);
		[CCode (cname = "gtk_scintilla_get_line_indentation")]
		public int get_line_indentation (int line);
		[CCode (cname = "gtk_scintilla_get_line_sel_end_position")]
		public int get_line_sel_end_position (int line);
		[CCode (cname = "gtk_scintilla_get_line_sel_start_position")]
		public int get_line_sel_start_position (int line);
		[CCode (cname = "gtk_scintilla_get_line_state")]
		public int get_line_state (int line);
		[CCode (cname = "gtk_scintilla_get_line_visible")]
		public bool get_line_visible (int line);
		[CCode (cname = "gtk_scintilla_get_main_selection")]
		public int get_main_selection ();
		[CCode (cname = "gtk_scintilla_get_margin_left")]
		public int get_margin_left ();
		[CCode (cname = "gtk_scintilla_get_margin_mask_n")]
		public int get_margin_mask_n (int margin);
		[CCode (cname = "gtk_scintilla_get_margin_right")]
		public int get_margin_right ();
		[CCode (cname = "gtk_scintilla_get_margin_sensitive_n")]
		public bool get_margin_sensitive_n (int margin);
		[CCode (cname = "gtk_scintilla_get_margin_type_n")]
		public int get_margin_type_n (int margin);
		[CCode (cname = "gtk_scintilla_get_margin_width_n")]
		public int get_margin_width_n (int margin);
		[CCode (cname = "gtk_scintilla_get_max_line_state")]
		public int get_max_line_state ();
		[CCode (cname = "gtk_scintilla_get_mod_event_mask")]
		public int get_mod_event_mask ();
		[CCode (cname = "gtk_scintilla_get_modify")]
		public bool get_modify ();
		[CCode (cname = "gtk_scintilla_get_mouse_down_captures")]
		public bool get_mouse_down_captures ();
		[CCode (cname = "gtk_scintilla_get_mouse_dwell_time")]
		public int get_mouse_dwell_time ();
		[CCode (cname = "gtk_scintilla_get_multi_paste")]
		public int get_multi_paste ();
		[CCode (cname = "gtk_scintilla_get_multiple_selection")]
		public bool get_multiple_selection ();
		[CCode (cname = "gtk_scintilla_get_overtype")]
		public bool get_overtype ();
		[CCode (cname = "gtk_scintilla_get_paste_convert_endings")]
		public bool get_paste_convert_endings ();
		[CCode (cname = "gtk_scintilla_get_position_cache")]
		public int get_position_cache ();
		[CCode (cname = "gtk_scintilla_get_print_colour_mode")]
		public int get_print_colour_mode ();
		[CCode (cname = "gtk_scintilla_get_print_magnification")]
		public int get_print_magnification ();
		[CCode (cname = "gtk_scintilla_get_print_wrap_mode")]
		public int get_print_wrap_mode ();
		[CCode (cname = "gtk_scintilla_get_property")]
		public static void get_property (GLib.Object object, uint property_id, GLib.Value value, GLib.ParamSpec pspec);
		[CCode (cname = "gtk_scintilla_get_read_only")]
		public bool get_read_only ();
		[CCode (cname = "gtk_scintilla_get_rectangular_selection_anchor")]
		public int get_rectangular_selection_anchor ();
		[CCode (cname = "gtk_scintilla_get_rectangular_selection_anchor_virtual_space")]
		public int get_rectangular_selection_anchor_virtual_space ();
		[CCode (cname = "gtk_scintilla_get_rectangular_selection_caret")]
		public int get_rectangular_selection_caret ();
		[CCode (cname = "gtk_scintilla_get_rectangular_selection_caret_virtual_space")]
		public int get_rectangular_selection_caret_virtual_space ();
		[CCode (cname = "gtk_scintilla_get_rectangular_selection_modifier")]
		public int get_rectangular_selection_modifier ();
		[CCode (cname = "gtk_scintilla_get_scroll_width")]
		public int get_scroll_width ();
		[CCode (cname = "gtk_scintilla_get_scroll_width_tracking")]
		public bool get_scroll_width_tracking ();
		[CCode (cname = "gtk_scintilla_get_search_flags")]
		public int get_search_flags ();
		[CCode (cname = "gtk_scintilla_get_sel_alpha")]
		public int get_sel_alpha ();
		[CCode (cname = "gtk_scintilla_get_sel_eol_filled")]
		public bool get_sel_eol_filled ();
		[CCode (cname = "gtk_scintilla_get_sel_text")]
		public int get_sel_text (string text);
		[CCode (cname = "gtk_scintilla_get_selection_end")]
		public int get_selection_end ();
		[CCode (cname = "gtk_scintilla_get_selection_mode")]
		public int get_selection_mode ();
		[CCode (cname = "gtk_scintilla_get_selection_n_anchor")]
		public int get_selection_n_anchor (int selection);
		[CCode (cname = "gtk_scintilla_get_selection_n_anchor_virtual_space")]
		public int get_selection_n_anchor_virtual_space (int selection);
		[CCode (cname = "gtk_scintilla_get_selection_n_caret")]
		public int get_selection_n_caret (int selection);
		[CCode (cname = "gtk_scintilla_get_selection_n_caret_virtual_space")]
		public int get_selection_n_caret_virtual_space (int selection);
		[CCode (cname = "gtk_scintilla_get_selection_n_end")]
		public int get_selection_n_end (int selection);
		[CCode (cname = "gtk_scintilla_get_selection_n_start")]
		public int get_selection_n_start (int selection);
		[CCode (cname = "gtk_scintilla_get_selection_start")]
		public int get_selection_start ();
		[CCode (cname = "gtk_scintilla_get_selections")]
		public int get_selections ();
		[CCode (cname = "gtk_scintilla_get_status")]
		public int get_status ();
		[CCode (cname = "gtk_scintilla_get_style_at")]
		public int get_style_at (int pos);
		[CCode (cname = "gtk_scintilla_get_style_bits")]
		public int get_style_bits ();
		[CCode (cname = "gtk_scintilla_get_style_bits_needed")]
		public int get_style_bits_needed ();
		[CCode (cname = "gtk_scintilla_get_styled_text")]
		public int get_styled_text (void* tr);
		[CCode (cname = "gtk_scintilla_get_tab_indents")]
		public bool get_tab_indents ();
		[CCode (cname = "gtk_scintilla_get_tab_width")]
		public int get_tab_width ();
		[CCode (cname = "gtk_scintilla_get_tag")]
		public int get_tag (int tagNumber, string tagValue);
		[CCode (cname = "gtk_scintilla_get_target_end")]
		public int get_target_end ();
		[CCode (cname = "gtk_scintilla_get_target_start")]
		public int get_target_start ();
		[CCode (cname = "gtk_scintilla_get_text")]
		public int get_text (int length, string text);
		[CCode (cname = "gtk_scintilla_get_text_length")]
		public int get_text_length ();
		[CCode (cname = "gtk_scintilla_get_text_range")]
		public int get_text_range (void* tr);
		[CCode (cname = "gtk_scintilla_get_two_phase_draw")]
		public bool get_two_phase_draw ();
		[CCode (cname = "gtk_scintilla_get_undo_collection")]
		public bool get_undo_collection ();
